--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
-    "cloudscraper": "^4.6.0"
+    "puppeteer": "^23.0.2"
   }
 }
