--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Proxy server to strip ads from streaming embeds",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "npx puppeteer browsers install chrome"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cheerio": "^1.0.0-rc.12",
-    "puppeteer": "^23.0.2"
+    "express": "^4.19.2",
+    "cheerio": "^1.0.0",
+    "puppeteer": "^23.0.2",
+    "@puppeteer/browsers": "^2.4.0"
   }
 }
