--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "postinstall": "npx puppeteer browsers install chrome"
+    "postinstall": "npx @puppeteer/browsers install chrome@131.0.6778.204"
   },
   "dependencies": {
     "express": "^4.19.2",
     "cheerio": "^1.0.0",
-    "puppeteer": "^23.0.2",
+    "puppeteer-core": "^23.0.2",
     "@puppeteer/browsers": "^2.4.0"
   }
 }
