--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "streaming-proxy-backend",
+  "name": "streaming-extractor-backend",
   "version": "1.0.0",
-  "description": "Proxy server to strip ads from streaming embeds",
+  "description": "Vidsrc m3u8 extractor backend",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "cheerio": "^1.0.0",
-    "axios": "^1.7.2"
+    "express": "^4.19.2"
   }
 }
